# xorg-xhost

./: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile.am  autogen.sh  configure.ac  xhost.c  xhost.man
